<resources>
    <string name="app_name">Github Search</string>
    <string name="welcome_to_github_search">Welcome to Github Search</string>
    <string name="repositories_title">Repositories</string>
    <string name="star_logo_description">star logo description</string>
    <string name="fork_logo">fork logo</string>
    <string name="repository_logo">repository logo</string>
    <string name="welcome_search_message">Welcome! Please enter a repository name to search.</string>
    <string name="open_project_in_browser">Open project in browser</string>
    <string name="contributors_title">Contributors</string>
    <string name="contributor_avatar">contributor avatar</string>
    <string name="loading_error_please_check_network_connection">Loading error (please check network connection)</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time</string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="permission_not_available">You do not have the required permission!</string>
    <string name="no_internet_connection" translatable="false">No Internet Connection!</string>
    <string name="something_went_wrong">Something went wrong, please try again.</string>
    <string name="ok">OK</string>
</resources>