<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragmentBackground"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:id="@+id/user_icon"
            android:layout_width="52dp"
            android:layout_height="52dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <ImageView
                android:id="@+id/repository_logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/repository_logo" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/owner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_icon" />

        <ImageView
            android:id="@+id/star_icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_star"
            android:contentDescription="@string/star_logo_description"
            app:layout_constraintEnd_toStartOf="@id/star_count"
            app:layout_constraintTop_toBottomOf="@id/owner_name" />

        <TextView
            android:id="@+id/star_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/fork_icon"
            app:layout_constraintTop_toBottomOf="@+id/owner_name" />

        <ImageView
            android:id="@+id/fork_icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_fork"
            android:contentDescription="@string/fork_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/owner_name" />

        <TextView
            android:id="@+id/fork_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/fork_icon"
            app:layout_constraintTop_toBottomOf="@id/owner_name" />

        <TextView
            android:id="@+id/repo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fork_count" />

        <TextView
            android:id="@+id/repo_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repo_name" />

        <Button
            android:id="@+id/open_project_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimaryLight"
            android:text="@string/open_project_in_browser"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repo_desc" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>
