<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginTop="4dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/search_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="4dp"
        app:cardBackgroundColor="@color/colorListItemBackground"
        app:cardCornerRadius="11dp"
        app:cardElevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:id="@+id/repository_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/repository_logo" />
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/repo_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/owner_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/repo_name" />

                <TextView
                    android:id="@+id/repo_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/owner_name" />

                <ImageView
                    android:id="@+id/star_icon"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/ic_star"
                    android:contentDescription="@string/star_logo_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/repo_desc" />

                <TextView
                    android:id="@+id/star_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/star_icon"
                    app:layout_constraintTop_toBottomOf="@+id/repo_desc" />

                <ImageView
                    android:id="@+id/fork_icon"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ic_fork"
                    android:contentDescription="@string/fork_logo"
                    app:layout_constraintStart_toEndOf="@+id/star_count"
                    app:layout_constraintTop_toBottomOf="@+id/repo_desc" />

                <TextView
                    android:id="@+id/fork_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/fork_icon"
                    app:layout_constraintTop_toBottomOf="@+id/repo_desc" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>